--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script src='script.js'></script>
+        <div class = "layout">
+            <table id = "board"></table>
+            <button id = "control">Start</button>
+            <script src='script.js'></script> 
+        </div>
         
+
     </body>
 </html>
