--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
         <h1>Tic Tac Toe</h1>
         <table id="board">
             <tr>
-                <td id="box_1"></td>
-                <td id="box_2"></td>
-                <td id="box_3"></td>
+                <td id="box_1" class = "cell">X</td>
+                <td id="box_2" class = "cell">O</td>
+                <td id="box_3" class = "cell"></td>
             </tr>
             <tr>
-                <td id="box_4"></td>
-                <td id="box_5"></td>
-                <td id="box_6"></td>
+                <td id="box_4" class = "cell"></td>
+                <td id="box_5" class = "cell"></td>
+                <td id="box_6" class = "cell"></td>
             </tr>
             <tr>
-                <td id="box_7"></td>
-                <td id="box_8"></td>
-                <td id="box_9"></td>
+                <td id="box_7" class = "cell"></td>
+                <td id="box_8" class = "cell"></td>
+                <td id="box_9" class = "cell"></td>
             </tr>
         </table>
         <h2 id="statusText">Game Status</h2>
-        <button id="control">Start</button>
+        <button id="controler">Start</button>
     </div>
     <script src='script.js'></script>
 </body>
